[gd_scene load_steps=12 format=1]

[ext_resource path="res://Scripts/BallsLevel.gd" type="Script" id=1]
[ext_resource path="res://img/Healthbar/BallsDisplay.tex" type="Texture" id=2]
[ext_resource path="res://img/Healthbar/BallsEmpty.tex" type="Texture" id=3]
[ext_resource path="res://img/Healthbar/BallsFull.tex" type="Texture" id=4]
[ext_resource path="res://Fonts/GlacialIndifference-Regular18.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Fonts/GlacialIndifference-Regular16.fnt" type="BitmapFont" id=6]
[ext_resource path="res://img/Healthbar/notification.tex" type="Texture" id=7]
[ext_resource path="res://Fonts/Alegrey.fnt" type="BitmapFont" id=8]
[ext_resource path="res://Fonts/AlegreyBold.fnt" type="BitmapFont" id=9]
[ext_resource path="res://img/coin.tex" type="Texture" id=10]
[ext_resource path="res://img/goldskull.tex" type="Texture" id=11]

[node name="Health" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Images" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="BallsDisplay" type="Patch9Frame" parent="Images"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = -1.0
margin/right = 700.0
margin/bottom = 84.0
texture = ExtResource( 2 )
patch_margin/left = 27
patch_margin/top = 15
patch_margin/right = 27
patch_margin/bottom = 15

[node name="BallsEmpty" type="Patch9Frame" parent="Images"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 161.0
margin/top = 24.0
margin/right = 620.0
margin/bottom = 56.0
texture = ExtResource( 3 )
patch_margin/left = 10
patch_margin/top = 3
patch_margin/right = 10
patch_margin/bottom = 3

[node name="BallsFull" type="Patch9Frame" parent="Images"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 162.0
margin/top = 26.0
margin/right = 367.0
margin/bottom = 54.0
texture = ExtResource( 4 )
patch_margin/left = 10
patch_margin/top = 5
patch_margin/right = 10
patch_margin/bottom = 3

[node name="Label" type="Label" parent="Images"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 38.0
margin/top = 26.0
margin/right = 148.0
margin/bottom = 48.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ballness Level:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="percent" type="Label" parent="Images"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 336.0
margin/top = 31.0
margin/right = 423.0
margin/bottom = 51.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100% / 100%"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ball" type="Patch9Frame" parent="Images"]

visibility/opacity = 0.7
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 108.0
margin/top = 42.0
margin/right = 276.0
margin/bottom = 108.0
texture = ExtResource( 7 )
patch_margin/left = 32
patch_margin/right = 31

[node name="Label" type="Label" parent="Images/ball"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 23.0
margin/top = 33.0
margin/right = 149.0
margin/bottom = 78.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BALLS OF STEELS
"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GreenHC" type="Label" parent="Images"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 721.0
margin/top = 23.0
margin/right = 781.0
margin/bottom = 66.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.177429, 0.53125, 0.166016, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "+ 100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RedHC" type="Label" parent="Images"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 726.0
margin/top = 22.0
margin/right = 792.0
margin/bottom = 111.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.839844, 0.118103, 0.118103, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "- 100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="coin" type="TextureFrame" parent="Images"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 751.0
margin/top = 3.0
margin/right = 842.0
margin/bottom = 83.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 0

[node name="Label" type="Label" parent="Images/coin"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 121.0
margin/top = 21.0
margin/right = 177.0
margin/bottom = 64.0
custom_fonts/font = ExtResource( 9 )
text = "100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="skull" type="TextureFrame" parent="Images"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 949.0
margin/top = -2.0
margin/right = 1033.0
margin/bottom = 86.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 0

[node name="Label" type="Label" parent="Images/skull"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 84.0
margin/top = 22.0
margin/right = 140.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


